# GPU-With-C-Sharp-Angular-WASM

./: .gitignore  .gitmodules  CMakeLists.txt  Filesizes.md  LICENSE.md  README.md  run.py
AngularBlazor/: CMakeLists.txt
BlazorEmscripten/: BlazorEmscripten.sln  README.md
BlazorEmscripten/Client/: BlazorEmscripten.Client.csproj  Program.cs  _Imports.razor
BlazorEmscripten/Client/Pages/: Pathtracing.razor
BlazorEmscripten/Client/Properties/: launchSettings.json
BlazorEmscripten/Client/Properties/PublishProfiles/: FolderProfile.pubxml
BlazorEmscripten/Client/SWIG/: LibRenderer.cs  LibRendererPINVOKE.cs  Renderer.cs  fixswig.py
BlazorEmscripten/Client/Shared/: MainLayout.razor
BlazorEmscripten/Client/wwwroot/: index.html
BlazorEmscripten/Client/wwwroot/scripts/: renderloop.js  setupGlContext.js
BlazorEmscripten/ClientNoRazor/: ClientNoRazor.csproj  Program.cs
BlazorEmscripten/ClientNoRazor/SWIG/: LibRenderer.cs  Renderer.cs
BlazorEmscripten/ClientNoRazor/wwwroot/: index.html
BlazorEmscripten/ClientNoRazor/wwwroot/scripts/: renderloop.js
BlazorEmscripten/LibRenderer/: CMakeLists.txt  LibRenderer.vcxproj  renderer.cpp  renderer.h  renderer.i  renderer_wrap.cpp
BlazorEmscripten/Server/: BlazorEmscripten.Server.csproj  Program.cs
BlazorEmscripten/Server/Controllers/: WeatherForecastController.cs
BlazorEmscripten/Server/Pages/: Error.cshtml  Error.cshtml.cs
BlazorEmscripten/Server/Properties/: launchSettings.json
CPP/: CMakeLists.txt  README.md  main.cpp
CPP/data/: shader.frag
EmscriptenGLFW/: CMakeLists.txt  CMakeSettings.json  CMakeSettings.json.cmake  README.md  callbacks.cpp  main.cpp  renderer.cpp  renderer.h  run.py  window.cpp
EmscriptenHTML5/: CMakeLists.txt  CMakeSettings.json  CMakeSettings.json.cmake  README.md  callbacks.h  main.cpp  renderer.cpp  renderer.h  run.py  window.cpp  window.h
EmscriptenHTML5SeparateLibs/: CMakeLists.txt  CMakeSettings.json  CMakeSettings.json.cmake  README.md  callbacks.cpp  run.py  window.h
Native/: CMakeLists.txt  README.md  callbacks.cpp  callbacks.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
NativeCSharp/: NativeCSharp.csproj  NativeCSharp.sln  Program.cs  README.md  Renderer.cs  Window.cs
cmake/Modules/: FindEmscripten.cmake
data/: shader.frag  shader.vert
