CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
include(${CMAKE_TOOLCHAIN_FILE})

PROJECT(EmscriptenGLFW)

FILE(GLOB SOURCE_FILES *.cpp) 
FILE(GLOB HEADER_FILES *.h *.hpp) 
add_executable(EmscriptenGLFW ${SOURCE_FILES} ${HEADER_FILES})

set_target_properties(EmscriptenGLFW
PROPERTIES 
    LINK_FLAGS "-sUSE_WEBGL2=1 -sUSE_GLFW=3 -sFULL_ES3=1 -sWASM=1 -sWASM_BIGINT -sMIN_WEBGL_VERSION=2 -sASYNCIFY"
    SUFFIX ".html"
)